--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,3 +3,44 @@
 nav ul li {
     display: inline;
 }
+html {
+    height: 100%;
+    background: #778899;
+}
+
+body {
+    position: relative;
+    padding-bottom: 100px;
+    margin: 0;
+    min-height: 90%;
+    background: #fff;
+}
+
+
+
+.profile_picture {
+    text-align: center;
+}
+
+.profile_picture img {
+    width: 250px;
+    height: 250px;
+    border-radius: 150px;
+}
+
+.footer {
+    height: 100px;
+    text-align: right;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+    font-size: 11pt;
+    background: #778899;
+    justify-content: space-between;
+}
+
+.footer>div {
+    padding: 15px;
+}
